[package]
name = "astryx"
version = "0.1.0"
authors = ["monomadic <deathdisco@protonmail.com>"]
edition = "2018"

[dependencies]
interpreter = { path = "components/interpreter" }
nom-indent = { git = "https://github.com/monomadic/nom-indent" }
parser = { path = "components/parser" }
models = { path = "components/models" }
error = { path = "components/error" }

[workspace]
default-members = ["cli"]
members = ["cli"]
