[package]
name = "interpreter"
version = "0.1.0"
authors = ["monomadic <deathdisco@protonmail.com>"]
edition = "2018"

[dependencies]
glob = "0.3.0"
# yaml-rust = "0.4"
# pulldown-cmark = "0.8.0"
# syntect = "4.2.0"
rctree = "0.3.3"
parser = { path = "../parser" }
html = { path = "../html" }
program = { path = "../program" }
markdown = { path = "../markdown" }
frontmatter = { path = "../frontmatter" }
