[package]
name = "interpreter"
version = "0.1.0"
authors = ["monomadic <deathdisco@protonmail.com>"]
edition = "2018"

[dependencies]
glob = "0.3.0"
rctree = "0.3.3"
parser = { path = "../parser" }
html = { path = "../html" }
markdown = { path = "../markdown" }
frontmatter = { path = "../frontmatter" }
error = { path = "../error" }
models = { path = "../models" }

[dev-dependencies]
nom-indent = { git = "https://github.com/monomadic/nom-indent" }
