[package]
name = "parser"
version = "0.1.0"
authors = ["monomadic <deathdisco@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "5.1.1", features = ["std"] }
yaml-rust = "0.4"
nom-tracable = "0.6.2"
nom_locate = "2.0.0"
